# GreenBerry

./: ARCTYPE-UIUX-RESEARCH.md  DEVELOPER-GUI.md  GETSTARTED.md  PRD-GUI.md  PRD-TUI.md  README.md  ROADMAP-GUI.md  ROADMAP-TUI.md  TECH-SPEC-GUI.md  TECH-SPEC-TUI.md
.github/workflows/: greenberry-gui-ci.yml
_greenberry-frontend-tui/greenberrytui/: package-lock.json
_greenberry-frontend-tui/greenberrytui/examples/: 01-stack.tsx  02-sidebar.tsx
greenberry-csv/: GETSTARTED.md  domainexport_20260629_430pm.csv  domainexport_clean.csv
greenberry-csv/csvtui/: .gitignore  README.md  go.mod  main.go  main_test.go
greenberry-deprecated-terminal/: README.md  package-lock.json  package.json  tsconfig.json
greenberry-deprecated-terminal/src/: app.tsx  theme.ts  util.ts
greenberry-deprecated-terminal/src/components/: NewsPanel.tsx  OsintPanel.tsx  Panel.tsx  StatusBar.tsx  Ticker.tsx
greenberry-frontend-macos/: README.md  index.html  package-lock.json  package.json
greenberry-frontend-macos/docs/: PERF-BUDGETS.md
greenberry-frontend-macos/spike/db-access/rust-sqlx/: Cargo.toml
greenberry-frontend-macos/spike/db-access/rust-sqlx/src/: main.rs
greenberry-frontend-macos/src/: App.css  App.tsx  main.tsx
greenberry-frontend-macos/src-tauri/: Cargo.toml  tauri.conf.json
greenberry-frontend-macos/src-tauri/src/: appdb.rs  db.rs  lib.rs  main.rs
greenberry-frontend-macos/src-tauri/tests/: appdb.rs  db_mysql.rs  db_pg.rs  e2e_persist_reconnect.rs
greenberry-frontend-macos/src/app/: dbPool.ts  (+8 more)
greenberry-frontend-tui/greenberrytui/: package.json
greenberry-terminal/src/: cli.tsx
greenberrytui/greenberrytui/: GETSTARTED.md  package.json  readme.md  tsconfig.json
(+126 files in other folders)
